test-cases/valid/reject/array_reference_non_array.ul
void main() {
    int i;
    print (i[0]); // i is not an array
}
